# toru

./: Cargo.toml  LICENSE
src/: main.rs
src/config/: mod.rs
src/fs/: mod.rs
src/subcommands/: batch_episodes.rs  find.rs  import.rs  make_episode_links.rs  mod.rs  move.rs  organize_episodes.rs  update_paths.rs
src/sycli/: mod.rs
src/torrent/: mod.rs
src/util/: mod.rs
