[package]
name = "toru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
fs_extra = "1.3.0"
indicatif = "0.18"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9"
ureq = "3.0.12"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
