[package]
name = "toru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
console = "0.16.0"
dialoguer = "0.12.0"
fs_extra = "1.3.0"
indicatif = { version = "0.18", features = ["rayon"] }
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.11.1"
rustix = "1.0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
sha1_smol = "1.0.1"
thiserror = "2.0.12"
toml = "0.9"
ureq = "3.0.12"
url = "2.5.7"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = "fat"
codegen-units = 1
